--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
 		"test:unit": "vitest"
 	},
 	"dependencies": {
+		"@loaders.gl/core": "^4.3.4",
+		"@loaders.gl/gltf": "^4.3.4",
+		"three": "^0.181.1",
 		"wgpu-matrix": "^3.4.0"
 	},
 	"devDependencies": {
@@ -23,6 +26,7 @@
 		"@sveltejs/adapter-auto": "^6.1.1",
 		"@sveltejs/kit": "^2.48.4",
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
+		"@types/three": "^0.181.0",
 		"@vitest/browser": "^3.2.4",
 		"@webgpu/types": "^0.1.66",
 		"playwright": "^1.56.1",
